--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -13,10 +13,10 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Use Node 20
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '20'
 
       - name: Install dependencies
         run: npm ci
@@ -24,18 +24,18 @@ jobs:
       - name: Build project
         run: npm run build
 
-      # IMPORTANT:
-      # We must include BOTH dist AND node_modules so Azure can run the server.
-      - name: Prepare artifact
+      - name: Prepare dist + modules for deploy
         run: |
-          mkdir package
-          cp -R dist package/dist
-          cp -R node_modules package/node_modules
-          cp package.json package/package.json
+          rm -rf deploy
+          mkdir deploy
+          cp -R dist deploy/dist
+          cp -R node_modules deploy/node_modules
+          cp package.json deploy/
+          cp package-lock.json deploy/ || true
 
-      - name: Deploy to Azure Web App
+      - name: Azure WebApp Deploy
         uses: azure/webapps-deploy@v2
         with:
           app-name: boreal-staff-server
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: package
+          package: deploy
