--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "nodenext",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "lib": ["ES2022"],
-
     "strict": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -12,16 +11,14 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
 
-    "noEmit": true,
-    "noImplicitAny": false
+    "outDir": "dist",
+    "noImplicitAny": false,
+    "sourceMap": true
   },
   "include": [
     "server/src/**/*",
     "server/types/**/*",
     "server/**/*.d.ts"
   ],
-  "exclude": [
-    "dist",
-    "node_modules"
-  ]
+  "exclude": ["dist", "node_modules"]
 }
