--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -2,31 +2,68 @@ name: Deploy Staff Server to Azure
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
+      # -----------------------------------------------------
+      # Install Node & dependencies
+      # -----------------------------------------------------
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
-      - name: Build project
-        run: npm run build
+      # -----------------------------------------------------
+      # TypeScript build
+      # -----------------------------------------------------
+      - name: Build server
+        run: |
+          npm run build
+          ls -la dist
 
-      - name: Deploy via ZipDeploy
-        uses: azure/webapps-deploy@v2
+      # -----------------------------------------------------
+      # Upload artifact for Azure deployment
+      # -----------------------------------------------------
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: server-dist
+          path: |
+            dist/**
+            package.json
+            package-lock.json
+
+      # -----------------------------------------------------
+      # Deploy to Azure App Service
+      # -----------------------------------------------------
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: server-dist
+          path: .
+
+      - name: Azure WebApp Deploy
+        uses: azure/webapps-deploy@v3
         with:
           app-name: boreal-staff-server
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          slot-name: production
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
           package: .
+
+      # -----------------------------------------------------
+      # Post-deploy sanity check
+      # -----------------------------------------------------
+      - name: Test health endpoint
+        run: |
+          curl -v https://server.boreal.financial/api/_int/health || true
