--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -2,68 +2,42 @@ name: Deploy Staff Server to Azure
 
 on:
   push:
-    branches: [ "main" ]
-  workflow_dispatch:
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      # -----------------------------------------------------
-      # Install Node & dependencies
-      # -----------------------------------------------------
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '20'
 
       - name: Install dependencies
         run: npm ci
 
-      # -----------------------------------------------------
-      # TypeScript build
-      # -----------------------------------------------------
-      - name: Build server
-        run: |
-          npm run build
-          ls -la dist
+      - name: Build TypeScript
+        run: npx tsc --build server/tsconfig.build.json
 
-      # -----------------------------------------------------
-      # Upload artifact for Azure deployment
-      # -----------------------------------------------------
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: server-dist
-          path: |
-            dist/**
-            package.json
-            package-lock.json
+          path: dist/
 
-      # -----------------------------------------------------
-      # Deploy to Azure App Service
-      # -----------------------------------------------------
-      - name: Download artifact
-        uses: actions/download-artifact@v4
+      # 🔥 REQUIRED — THIS WAS MISSING
+      - name: Azure Login
+        uses: azure/login@v2
         with:
-          name: server-dist
-          path: .
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Azure WebApp Deploy
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: boreal-staff-server
-          slot-name: production
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
-          package: .
-
-      # -----------------------------------------------------
-      # Post-deploy sanity check
-      # -----------------------------------------------------
-      - name: Test health endpoint
-        run: |
-          curl -v https://server.boreal.financial/api/_int/health || true
+          app-name: "boreal-staff-server"
+          package: dist
