--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -10,33 +10,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 20
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Build TypeScript
-        run: npx tsc --build tsconfig.build.json
+      - name: Build project
+        run: npm run build --if-present
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: server-dist
-          path: dist/
+      - name: Prepare deployment package
+        run: |
+          mkdir server-dist
+          cp -r dist package.json package-lock.json node_modules server-dist/
+          cd server-dist
+          zip -r ../server-dist.zip .
 
-      - name: Azure Login
-        uses: azure/login@v2
+      - name: Deploy to Azure Web App (Publish Profile)
+        uses: azure/webapps-deploy@v2
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: "boreal-staff-server"
-          package: dist
+          app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: server-dist.zip
