--- a/package.json
+++ b/package.json
@@ -2,41 +2,51 @@
   "name": "staff-server",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
-  "main": "dist/index.js",
-  "engines": {
-    "node": ">=20"
-  },
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
-    "start": "node dist/index.js"
+    "dev": "tsx watch server/src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc -p server/tsconfig.json",
+    "test": "npm run test:unit && npm run test:e2e",
+    "test:unit": "vitest",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
-    "@azure/storage-blob": "12.29.1",
-    "@prisma/client": "^5.22.0",
-    "bcrypt": "^6.0.0",
-    "body-parser": "1.20.3",
-    "cors": "2.8.5",
+    "@aws-sdk/client-s3": "^3.637.0",
+    "@aws-sdk/s3-request-presigner": "^3.637.0",
+    "@prisma/client": "^5.11.0",
+    "@types/cookie-parser": "^1.4.3",
+    "axios": "^1.6.8",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "0.32.0",
-    "express": "4.21.2",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.0.1",
+    "fast-xml-parser": "^4.3.5",
+    "form-data": "^4.0.0",
+    "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "8.13.1",
-    "twilio": "^5.10.5",
-    "uuid": "9.0.1",
-    "zod": "^4.1.12"
+    "multer": "^1.4.5-lts.2",
+    "multer-s3": "^3.0.1",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.12",
+    "openid-client": "^6.1.4",
+    "pg": "^8.11.3",
+    "sharp": "^0.33.3",
+    "stripe": "^14.24.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^6.0.0",
-    "@types/body-parser": "1.19.5",
-    "@types/cors": "2.8.17",
-    "@types/express": "4.17.21",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "20.11.30",
-    "@types/pg": "8.11.6",
-    "@types/uuid": "^9.0.8",
-    "drizzle-kit": "0.24.1",
-    "tsx": "4.20.6",
-    "typescript": "5.4.5"
+    "@playwright/test": "^1.45.1",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.11.30",
+    "@types/uuid": "^9.0.7",
+    "tsx": "^4.7.0",
+    "typescript": "^5.4.5",
+    "vitest": "^1.4.0"
   }
 }
