--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@aws-sdk/client-s3": "^3.637.0",
     "@aws-sdk/s3-request-presigner": "^3.637.0",
     "@prisma/client": "^5.11.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.3",
     "axios": "^1.6.8",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -35,7 +37,9 @@
     "pg": "^8.11.3",
     "sharp": "^0.33.3",
     "stripe": "^14.24.0",
-    "uuid": "^9.0.1"
+    "twilio": "^5.10.6",
+    "uuid": "^9.0.1",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@playwright/test": "^1.45.1",
