--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -23,7 +23,10 @@ jobs:
         run: npm run build
 
       - name: Prepare deployment package
-        run: zip -r release.zip dist package.json package-lock.json
+        run: |
+          npm ci
+          npm run build
+          zip -r release.zip dist node_modules package.json package-lock.json
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
