--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,31 @@
 {
-  "extends": "./server/tsconfig.json",
   "compilerOptions": {
-    "rootDir": "./server/src",
-    "outDir": "./server/dist"
+    "target": "ES2022",
+    "module": "ES2022",
+    "moduleResolution": "node",
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "allowJs": false,
+    "checkJs": false,
+    "strict": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "baseUrl": ".",
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "strictNullChecks": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "types": ["node"],
+    "paths": {
+      "@/*": ["server/src/*"]
+    }
   },
-  "include": ["server/src", "server/types"],
-  "exclude": ["node_modules", "server/dist"]
+  "include": [
+    "server/src"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
