--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -3,20 +3,13 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
-    "declaration": false,
-    "sourceMap": false,
-    "noEmitOnError": true
+    "moduleResolution": "node",
+    "module": "ES2022",
+    "target": "ES2022",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": false,
+    "skipLibCheck": true
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "**/*.test.ts",
-    "**/*.spec.ts",
-    "simulation",
-    "drizzle.config.ts",
-    "vitest.config.ts",
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src/**/*"]
 }
