--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "type": "commonjs",
   "scripts": {
-    "build": "tsc -p server/tsconfig.build.json",
-    "start": "node server/dist/index.js"
+    "build": "tsc -p tsconfig.build.json",
+    "start": "node dist/index.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3"
   }
 }
