--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,11 +1,17 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
+    "outDir": "../dist",
     "rootDir": "./src",
-    "outDir": "./dist",
-    "declaration": true,
-    "sourceMap": true
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "target": "ES2022",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "types": ["node"]
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["tests", "**/*.test.ts"]
+  "include": ["src/**/*.ts", "types/**/*.d.ts"],
+  "exclude": ["**/*.test.ts", "**/*.spec.ts"]
 }
