--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc -p server/tsconfig.build.json",
-    "start": "node server/dist/index.js"
+    "start": "node server/dist/server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
