--- a/.github/workflows/main_boreal-staff-server.yml
+++ b/.github/workflows/main_boreal-staff-server.yml
@@ -2,11 +2,8 @@ name: Deploy Staff-Server to Azure
 
 on:
   push:
-    branches: [ "main" ]
-  workflow_dispatch:
-
-permissions:
-  contents: read
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
@@ -19,8 +16,7 @@ jobs:
       - name: Use Node 20
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: "npm"
+          node-version: 20
 
       - name: Install dependencies
         run: npm ci
@@ -28,12 +24,15 @@ jobs:
       - name: Build
         run: npm run build
 
+      # FIX: correct build output path
       - name: Sanity check build output exists
-        run: test -f server/dist/index.js
+        run: |
+          test -f server/dist/index.js
 
       - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v3
+        uses: azure/webapps-deploy@v2
         with:
           app-name: boreal-staff-server
+          slot-name: production
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: .
