Fix deployment workflow and startup env checks

--- a/.github/workflows/main_boreal-staff-server.yml
+++ b/.github/workflows/main_boreal-staff-server.yml
@@ -2,8 +2,7 @@ name: Deploy Staff-Server to Azure
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
@@ -23,16 +22,52 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Lint (if present)
+        run: |
+          node -e "const p=require('./package.json'); process.exit(p.scripts && p.scripts.lint ? 0 : 1)" \
+            && npm run lint \
+            || echo "no lint script"
+
+      - name: Test (if present)
+        run: |
+          node -e "const p=require('./package.json'); process.exit((p.scripts && (p.scripts.test || p.scripts['test:ci'])) ? 0 : 1)" \
+            && (npm run test || npm run test:ci || true) \
+            || echo "no test script"
+
       - name: Build
         run: npm run build
 
-      - name: Verify build output
+      - name: Verify build output exists (auto-detect)
         run: |
-          test -f server/dist/index.js
+          set -e
+          if [ -f server/dist/index.js ]; then
+            echo "Found server/dist/index.js"
+          elif [ -f dist/index.js ]; then
+            echo "Found dist/index.js"
+          else
+            echo "ERROR: Could not find server/dist/index.js or dist/index.js after build."
+            echo "Tree (server/dist):"
+            ls -la server/dist || true
+            echo "Tree (dist):"
+            ls -la dist || true
+            exit 1
+          fi
+
+      - name: Create deployment package (zip)
+        run: |
+          set -e
+          rm -f app.zip
+          zip -r app.zip . \
+            -x "**/node_modules/**" \
+            -x "**/.git/**" \
+            -x "**/.github/**" \
+            -x "**/.devcontainer/**" \
+            -x "**/tests/**" \
+            -x "**/*.log"
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: boreal-staff-server
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: .
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
+          package: app.zip
